Deployment/K8s/Base/APIs/Catalog-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-dpl
  labels:
    app: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: thestore-catalog
          image: thestore/catalog
          imagePullPolicy: IfNotPresent
          ports:
            - name: catalog-prt
              containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
spec:
  selector:
    app: catalog
  ports:
    - name: catalog-svc-prt
      port: 80
      protocol: TCP
      targetPort: catalog-prt
