Deployment/K8s/Base/APIs/MSSQL-Db-StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql-db-stset
spec:
  selector:
    matchLabels:
      app: mssql-db
  serviceName: mssql-db-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: mssql-db
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: thestore-mssqldb
          image: mcr.microsoft.com/mssql/server:2019-latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: mssql-db-prt
              containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql
              name: mssql-db-vol
  volumeClaimTemplates:
    - metadata:
        name: mssql-db-vol
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-db-svc
spec:
  selector:
    app: mssql-db
  ports:
    - name: mssqldb-svc-prt
      port: 1433
      targetPort: mssql-db-prt
